crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__order_by_nested_field.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "name": {
          "name": "Witch-king of Angmar",
          "popularity": "70"
        },
        "characters": {
          "members": [
            {
              "name": "Otsëa",
              "popularity": "7"
            }
          ],
          "name": "Nazgûl"
        }
      },
      {
        "name": {
          "name": "Gollum",
          "popularity": "1"
        },
        "characters": {
          "members": [
            {
              "name": "Frodo",
              "popularity": "3"
            },
            {
              "name": "Sam",
              "popularity": "9000"
            }
          ],
          "name": "Mellowship"
        }
      },
      {
        "name": {
          "name": "Frodo",
          "popularity": "3"
        },
        "characters": {
          "members": [
            {
              "name": "Legolas",
              "popularity": "200"
            },
            {
              "name": "Gimli",
              "popularity": "300"
            }
          ],
          "name": "Fellowship"
        }
      }
    ]
  }
]
