crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__select_order_by_artist_album_count_agg.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
