crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__select_order_by_artist_name_with_name.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "For Those About To Rock We Salute You",
        "Artist": {
          "rows": [
            {
              "Name": "AC/DC"
            }
          ]
        }
      },
      {
        "Name": "Let There Be Rock",
        "Artist": {
          "rows": [
            {
              "Name": "AC/DC"
            }
          ]
        }
      },
      {
        "Name": "A Copland Celebration, Vol. I",
        "Artist": {
          "rows": [
            {
              "Name": "Aaron Copland & London Symphony Orchestra"
            }
          ]
        }
      },
      {
        "Name": "Worlds",
        "Artist": {
          "rows": [
            {
              "Name": "Aaron Goldberg"
            }
          ]
        }
      },
      {
        "Name": "The World of Classical Favourites",
        "Artist": {
          "rows": [
            {
              "Name": "Academy of St. Martin in the Fields & Sir Neville Marriner"
            }
          ]
        }
      }
    ]
  }
]
