crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__select_order_by_name.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Achtung Baby"
      },
      {
        "Title": "A Copland Celebration, Vol. I"
      },
      {
        "Title": "Acústico"
      },
      {
        "Title": "Acústico MTV"
      },
      {
        "Title": "Acústico MTV [Live]"
      }
    ]
  }
]
