crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__select_track_order_by_artist_id_and_album_title.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Evil Walks"
      },
      {
        "Name": "For Those About To Rock (We Salute You)"
      },
      {
        "Name": "Inject The Venom"
      }
    ]
  }
]
