crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Crazy Train"
      },
      {
        "Name": "I Don't Know"
      }
    ]
  }
]
